Fix gap below trailer

--- a/style.css
+++ b/style.css
@@ -153,7 +153,6 @@ a:hover {
 
 .trailer
 {
-	text-align: center;
 	background-image: linear-gradient(180deg, #2c727c 0%, #3a7782 7%);
 }
 
@@ -161,6 +160,9 @@ a:hover {
 {
 	max-width: 100%;
 	max-height: 56vw;
+	display:block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .gallery
